implements mehtod of shared credentials
