# api/handlers/credentials/router.go
@@ -15,4 +15,6 @@ func RouterCredentials(app *fiber.App, db *sqlx.DB, txID string) {
 	user.Post("/jwt", middleware.JWTProtected(), h.getJWTTransaction)
 	user.Get("/all/:block_id/:limit/:offset", middleware.JWTProtected(), h.getAllCredentials)
 	user.Get("/files/:trx", middleware.JWTProtected(), h.getAllTransactionFiles)
+	user.Post("/shared", middleware.JWTProtected(), h.sharedCredentials)
+	user.Post("/get-shared", middleware.JWTProtected(), h.getSharedCredentials)
 }
